UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Inclusion_Contract_Pharmabid__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmabid Exclusion Customers Master</relationshipLabel>
        <relationshipName>Pharmabid_Exclusion_Customers_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmabid Exclusion Customers Master (Group Customer Name)</relationshipLabel>
        <relationshipName>Pharmabid_Exclusion_Customers_Master1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Customer_Number__c</fullName>
        <label>Group Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pharmabid Exclusion Customer Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Group_Customer_Name__c</columns>
        <columns>Group_Customer_Number__c</columns>
        <columns>Contract_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ex-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmabid Exclusion Customers Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>